# askyourdocs

./: .env copy  .gitignore  Dockerfile  LICENSE  README.md  app.py  db_migration.sh  docker-compose.yml  embedding.py  entrypoint.sh  filepreprocessing.py  pipelines.py  pyproject.toml  req_freeze.txt  requirements.txt  run_ayd.sh  run_the_app.txt  setup.py  similarity.py
.github/workflows/: deploy.yml  docker-app.yml  docker-backend.yml  docker-frontend.yml  docker.yml  main.yml
ansible/: ansible.cfg  requirements.yml  secrets.yml  site.yml
ansible/inventory/: localhost.yml  sandbox.yml  test.yml
ansible/templates/: docker-compose.yml.j2  dotenv.j2
app/: Dockerfile  README.md  req_freeze.txt
app/backend/: app.py  authentication.py  context_manager.py  settings.py
app/frontend/: .eslintrc.cjs  .gitignore  Dockerfile  entrypoint.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/keycloak/: realm-export.json
app/landing/: index.html
app/pg-init-scripts/: user_credential_data.csv  user_entity_data.csv  user_entity_data.sql
app/postgres_scripts/: user_entity_data.csv  user_entity_data.sql
arxiv/: langchain_test.py
askyourdocs/: __init__.py  __main__.py  app.py  authentication.py  base.py  embedding.py  filepreprocessing.py  main.py  pipeline.py  pipelines.py  settings.py  utils.py
askyourdocs/modelling/: base.py  cli.py  llm.py
askyourdocs/pipeline/: base.py  cli.py  pipeline.py
docker/: Dockerfile
nginx/: api.conf.template  keycloak.conf.template  www.conf.template
tests/: test_pipelines.py  test_similarity.py
(+39 files in other folders)
